--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop-project</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Shop-project</title>
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/style.css" />
+		<!-- link fonts -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap"
+			rel="stylesheet"
+		/>
+	</head>
+	<body>
+		<header class="header">
+			<div class="container">
+                <div class="row">
+                    <div class="col-3"><div class="logo"><a href="#"><img src="img/LogoHere.png" alt="logo"></a></div></div>
+                    <div class="col-6"><nav>
+                        <ul class="menu">
+                            <li><a href="">Home</a></li>
+                            <li><a href="">Products</a></li>
+                            <li><a href="">Payments</a></li>
+                            <li><a href="">Shipping</a></li>
+                        </ul>
+                    </nav></div>
+                    <div class="col-3">search</div>
+                </div>
+            </div>
+		</header>
+		<main class="main">main</main>
+		<footer class="footer">footer</footer>
+	</body>
 </html>
