add search and basket count

--- a/index.html
+++ b/index.html
@@ -17,19 +17,40 @@
 	<body>
 		<header class="header">
 			<div class="container">
-                <div class="row">
-                    <div class="col-3"><div class="logo"><a href="#"><img src="img/LogoHere.png" alt="logo"></a></div></div>
-                    <div class="col-6"><nav>
-                        <ul class="menu">
-                            <li><a href="">Home</a></li>
-                            <li><a href="">Products</a></li>
-                            <li><a href="">Payments</a></li>
-                            <li><a href="">Shipping</a></li>
-                        </ul>
-                    </nav></div>
-                    <div class="col-3">search</div>
-                </div>
-            </div>
+				<div class="row">
+					<div class="col-3">
+						<div class="logo">
+							<a href="#"><img src="img/LogoHere.png" alt="logo" /></a>
+						</div>
+					</div>
+					<div class="col-6">
+						<nav>
+							<ul class="menu">
+								<li><a href="">Home</a></li>
+								<li><a href="">Products</a></li>
+								<li><a href="">Payments</a></li>
+								<li><a href="">Shipping</a></li>
+							</ul>
+						</nav>
+					</div>
+					<div class="col-3">
+						<div class="row">
+							<div class="col-4">
+                                <div class="search">
+								<a href=""
+									>search
+									<img class="img__search" src="img/search.png" alt="search"
+								/></a>
+                                </div>
+							</div>
+							<div class="col-5"><div class="basket">
+                                <img src="img/basket.png" alt="basket">
+                                <div class="basket__count">4</div>
+                            </div></div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</header>
 		<main class="main">main</main>
 		<footer class="footer">footer</footer>
