--- a/index.html
+++ b/index.html
@@ -26,27 +26,36 @@
 					<div class="col-6">
 						<nav>
 							<ul class="menu">
-								<li><a href="">Home</a></li>
-								<li><a href="">Products</a></li>
-								<li><a href="">Payments</a></li>
-								<li><a href="">Shipping</a></li>
+								<li class="menu__items"><a href="">Home</a></li>
+								<li class="menu__items"><a href="">Products</a>
+                                <ul class="sub__menu">
+                                    <li class="items"><a href="">Lorem ipsum dolor</a></li>
+                                    <li class="items"><a href="">Sit amet</a></li>
+                                    <li class="items"><a href="">Lorem ipsum</a></li>
+                                    <li class="items"><a href="">Fedhy pipipsum</a></li>
+                                    <li class="items"><a href="">Lorem ipsum fodolor</a></li>
+                                    <li class="items"><a href="">Lorem pipsum vedolor.</a></li>
+                                    <li class="items"><a href="">Lorem sit amet</a></li>
+                                </ul></li>
+								<li class="menu__items"><a href="">Payments</a></li>
+								<li class="menu__items"><a href="">Shipping</a></li>
 							</ul>
 						</nav>
 					</div>
 					<div class="col-3">
 						<div class="row">
 							<div class="col-4">
-                                <div class="search">
-								<a href=""
-									>search
-									<img class="img__search" src="img/search.png" alt="search"
-								/></a>
-                                </div>
+								<div class="search">
+									<input type="text" placeholder="search"/>
+									<img class="img__search" src="img/search.png" alt="search"/>
+								</div>
 							</div>
-							<div class="col-5"><div class="basket">
-                                <img src="img/basket.png" alt="basket">
-                                <div class="basket__count">4</div>
-                            </div></div>
+							<div class="col-5">
+								<div class="basket">
+									<img src="img/basket.png" alt="basket" />
+									<div class="basket__count">4</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
