--- a/index.html
+++ b/index.html
@@ -44,16 +44,15 @@
 					</div>
 					<div class="col-3">
 						<div class="row">
-							<div class="col-4">
+							<div class="col-9">
 								<div class="search">
 									<input type="text" placeholder="search"/>
-									<img class="img__search" src="img/search.png" alt="search"/>
+									<button></button>
 								</div>
 							</div>
-							<div class="col-5">
-								<div class="basket">
-									<img src="img/basket.png" alt="basket" />
-									<div class="basket__count">4</div>
+							<div class="col-3">
+								<div class="card">
+									<div class="card__count">4</div>
 								</div>
 							</div>
 						</div>
