--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 			href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap"
 			rel="stylesheet"
 		/>
+		  <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 	</head>
 	<body>
 		<header class="header">
@@ -27,7 +31,7 @@
 						<nav>
 							<ul class="menu">
 								<li class="menu__items"><a href="">Home</a></li>
-								<li class="menu__items"><a href="">Products</a>
+								<li class="menu__items"><a href="">Products <i class="fa fa-angle-down"></i></a>
                                 <ul class="sub__menu">
                                     <li class="items"><a href="">Lorem ipsum dolor</a></li>
                                     <li class="items"><a href="">Sit amet</a></li>
