change header payment

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 										<li class="items"><a href="">Lorem sit amet</a></li>
 									</ul>
 								</li>
-								<li class="menu__items"><a href="">Payments</a></li>
+								<li class="menu__items"><a href="">Payment 3</a></li>
 								<li class="menu__items"><a href="">Shipping</a></li>
 							</ul>
 						</nav>
