--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<div class="col-6">
 						<nav>
 							<ul class="menu">
-								<li class="menu__items"><a href="">Home 2</a></li>
+								<li class="menu__items"><a href="">Home</a></li>
 								<li class="menu__items">
 									<a href="">Products <i class="fa fa-angle-down"></i></a>
 									<ul class="sub__menu">
@@ -48,8 +48,8 @@
 										<li class="items"><a href="">Lorem sit amet</a></li>
 									</ul>
 								</li>
-								<li class="menu__items"><a href="">Payment 3</a></li>
-								<li class="menu__items"><a href="">Shipping 4</a></li>
+								<li class="menu__items"><a href="">Payment</a></li>
+								<li class="menu__items"><a href="">Shipping</a></li>
 							</ul>
 						</nav>
 					</div>
