--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 		/>
 		<!-- slide -->
 		<link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-/>
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+		/>
 	</head>
 	<body>
 		<header class="header">
@@ -71,40 +71,394 @@
 				</div>
 			</div>
 		</header>
+
 		<main class="main">
-				<!-- Slider main container -->
-<div class="swiper">
-  <!-- Additional required wrapper -->
-  <div class="swiper-wrapper">
-    <!-- Slides -->
-    <div class="swiper-slide">Slide #1</div>
-    <div class="swiper-slide">Slide #2</div>
-    <div class="swiper-slide">Slide #3</div>
-  </div>
+			<!-- Slider main container -->
+			<div class="swiper">
+				<!-- Additional required wrapper -->
+				<div class="swiper-wrapper">
+					<!-- Slides -->
+					<div class="swiper-slide">Slide #1</div>
+					<div class="swiper-slide">Slide #2</div>
+					<div class="swiper-slide">Slide #3</div>
+				</div>
 
-
-  <!-- If we need navigation buttons -->
-  <div class="swiper-button-prev"></div>
-  <div class="swiper-button-next"></div>
-
-</div>
-		
+				<!-- If we need navigation buttons -->
+				<div class="swiper-button-prev"></div>
+				<div class="swiper-button-next"></div>
+			</div>
+			<div class="container">
+				<div class="row">
+					<div class="col-3">
+						<div class="filter">
+							<form action="">
+								<div class="device-type">
+									<p>DEVICE TYPE</p>
+									<input type="checkbox" class="input" /><label
+										for="Laptop"
+										>Laptop</label
+									><br />
+									<input type="checkbox" class="input" /><label
+										for="Tablet"
+										>Tablet</label>
+								</div>
+								<div class="color">
+									<p>COLOR</p>
+									<input type="checkbox" class="input" /><label
+										for="Black"
+										>Black</label
+									><br />
+									<input type="checkbox" class="input" /><label
+										for="Red"
+										>Red</label
+									><br />
+									<input type="checkbox" class="input" /><label
+										for="Green"
+										>Green</label
+									><br />
+									<input type="checkbox" class="input" /><label
+										for="Blue"
+										>Blue</label
+									><br />
+									<input type="checkbox"  class="input" /><label
+										for="Orange"
+										>Orange</label
+									>
+								</div>
+								<div class="ram">
+									<p>RAM</p>
+									<input type="checkbox" id="1GB" class="input" /><label
+										for="1GB"
+										>1GB</label
+									><br />
+									<input type="checkbox" id="2GB" class="input" /><label
+										for="2GB"
+										>2GB</label
+									><br />
+									<input type="checkbox" id="4GB" class="input" /><label
+										for="4GB"
+										>4GB</label
+									><br />
+									<input type="checkbox" id="6GB" class="input" /><label
+										for="6GB"
+										>6GB</label
+									><br />
+									<input type="checkbox" id="8GB" class="input" /><label
+										for="8GB"
+										>8GB</label
+									><br />
+								</div>
+								<div class="more-options">Show more options...</div>
+								<div>
+									<button class="filter-submit">SUBMIT</button>
+								</div>
+							</form>
+						</div>
+					</div>
+					<div class="col-9">
+						<div class="row">
+							<div class="col-12">
+								<div class="breadcrumbs">Home page > Pages</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-8">
+								<div class="title">Laptops and Tablets</div>
+							</div>
+							<div class="col-4">sort</div>
+						</div>
+						<div class="row">
+							<div class="col-4">
+								<div class="product">
+									<div class="product-image">
+										<img class="prd-img" src="img/imac.png" alt="" />
+										<div class="zoom"></div>
+										<div class="like"></div>
+									</div>
+									<div class="product-body">
+										<div class="product-name">#1 Device Name</div>
+										<div class="product-descriprion">
+											Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+										</div>
+										<div class="product-features">
+											<span>TYPE:</span> Laptop
+										</div>
+										<div class="product-features">
+											<span>SCREEN SIZE:</span> 7 inches
+										</div>
+										<div class="product-features"><span>RAM:</span> 1GB</div>
+										<div class="product-price">$599 <sup>25</sup></div>
+										<button class="btn-big btn-more-details">
+											More details
+										</button>
+										<button class="btn-big btn-add-to-card">
+											Add to cart
+											<img src="img/korzwhite.png" alt="" />
+										</button>
+									</div>
+								</div>
+							</div>
+							<div class="col-4">
+								<div class="product">
+									<div class="product-image">
+										<img class="prd-img" src="img/tvbox.png" alt="" />
+										<div class="zoom"></div>
+										<div class="like"></div>
+									</div>
+									<div class="product-body">
+										<div class="product-name">#2 Device Name</div>
+										<div class="product-descriprion">
+											Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+										</div>
+										<div class="product-features">
+											<span>TYPE:</span> Laptop
+										</div>
+										<div class="product-features">
+											<span>SCREEN SIZE:</span> 7 inches
+										</div>
+										<div class="product-features"><span>RAM:</span> 1GB</div>
+										<div class="product-price">$1250 <sup>99</sup></div>
+										<button class="btn-big btn-more-details">
+											More details
+										</button>
+										<button class="btn-big btn-add-to-card">
+											Add to cart
+											<img src="img/korzwhite.png" alt="" />
+										</button>
+									</div>
+								</div>
+							</div>
+							<div class="col-4">
+								<div class="product">
+									<div class="product-image">
+										<img class="prd-img" src="img/watch.png" alt="" />
+										<div class="zoom"></div>
+										<div class="like"></div>
+									</div>
+									<div class="product-body">
+										<div class="product-name">#3 Device Name</div>
+										<div class="product-descriprion">
+											Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+										</div>
+										<div class="product-features">
+											<span>TYPE:</span> Laptop
+										</div>
+										<div class="product-features">
+											<span>SCREEN SIZE:</span> 7 inches
+										</div>
+										<div class="product-features"><span>RAM:</span> 1GB</div>
+										<div class="product-price">$399 <sup>55</sup></div>
+										<button class="btn-big btn-more-details">
+											More details
+										</button>
+										<button class="btn-big btn-add-to-card">
+											Add to cart
+											<img src="img/korzwhite.png" alt="" />
+										</button>
+									</div>
+								</div>
+							</div>
+							<div class="col-4">
+								<div class="product">
+									<div class="product-image">
+										<img class="prd-img" src="img/laptop.png" alt="" />
+										<div class="zoom"></div>
+										<div class="like"></div>
+									</div>
+									<div class="product-body">
+										<div class="product-name">#4 Device Name</div>
+										<div class="product-descriprion">
+											Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+										</div>
+										<div class="product-features">
+											<span>TYPE:</span> Laptop
+										</div>
+										<div class="product-features">
+											<span>SCREEN SIZE:</span> 7 inches
+										</div>
+										<div class="product-features"><span>RAM:</span> 1GB</div>
+										<div class="product-price">$599 <sup>25</sup></div>
+										<button class="btn-big btn-more-details">
+											More details
+										</button>
+										<button class="btn-big btn-add-to-card">
+											Add to cart
+											<img src="img/korzwhite.png" alt="" />
+										</button>
+									</div>
+								</div>
+							</div>
+							<div class="col-4">
+								<div class="product">
+									<div class="product-image">
+										<img class="prd-img" src="img/tablet.png" alt="" />
+										<div class="zoom"></div>
+										<div class="like"></div>
+									</div>
+									<div class="product-body">
+										<div class="product-name">#5 Device Name</div>
+										<div class="product-descriprion">
+											Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+										</div>
+										<div class="product-features">
+											<span>TYPE:</span> Laptop
+										</div>
+										<div class="product-features">
+											<span>SCREEN SIZE:</span> 7 inches
+										</div>
+										<div class="product-features"><span>RAM:</span> 1GB</div>
+										<div class="product-price">$1250 <sup>99</sup></div>
+										<button class="btn-big btn-more-details">
+											More details
+										</button>
+										<button class="btn-big btn-add-to-card">
+											Add to cart
+											<img src="img/korzwhite.png" alt="" />
+										</button>
+									</div>
+								</div>
+							</div>
+							<div class="col-4">
+								<div class="product">
+									<div class="product-image">
+										<img class="prd-img" src="img/phone.png" alt="" />
+										<div class="zoom"></div>
+										<div class="like"></div>
+									</div>
+									<div class="product-body">
+										<div class="product-name">#6 Device Name</div>
+										<div class="product-descriprion">
+											Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+										</div>
+										<div class="product-features">
+											<span>TYPE:</span> Laptop
+										</div>
+										<div class="product-features">
+											<span>SCREEN SIZE:</span> 7 inches
+										</div>
+										<div class="product-features"><span>RAM:</span> 1GB</div>
+										<div class="product-price">$399 <sup>50</sup></div>
+										<button class="btn-big btn-more-details">
+											More details
+										</button>
+										<button class="btn-big btn-add-to-card">
+											Add to cart
+											<img src="img/korzwhite.png" alt="" />
+										</button>
+									</div>
+								</div>
+							</div>
+							<div class="col-4">
+								<div class="product">
+									<div class="product-image">
+										<img class="prd-img" src="img/watch.png" alt="" />
+										<div class="zoom"></div>
+										<div class="like"></div>
+									</div>
+									<div class="product-body">
+										<div class="product-name">#7 Device Name</div>
+										<div class="product-descriprion">
+											Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+										</div>
+										<div class="product-features">
+											<span>TYPE:</span> Laptop
+										</div>
+										<div class="product-features">
+											<span>SCREEN SIZE:</span> 7 inches
+										</div>
+										<div class="product-features"><span>RAM:</span> 1GB</div>
+										<div class="product-price">$399 <sup>50</sup></div>
+										<button class="btn-big btn-more-details">
+											More details
+										</button>
+										<button class="btn-big btn-add-to-card">
+											Add to cart
+											<img src="img/korzwhite.png" alt="" />
+										</button>
+									</div>
+								</div>
+							</div>
+							<div class="col-4">
+								<div class="product">
+									<div class="product-image">
+										<img class="prd-img" src="img/laptop.png" alt="" />
+										<div class="zoom"></div>
+										<div class="like"></div>
+									</div>
+									<div class="product-body">
+										<div class="product-name">#8 Device Name</div>
+										<div class="product-descriprion">
+											Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+										</div>
+										<div class="product-features">
+											<span>TYPE:</span> Laptop
+										</div>
+										<div class="product-features">
+											<span>SCREEN SIZE:</span> 7 inches
+										</div>
+										<div class="product-features"><span>RAM:</span> 1GB</div>
+										<div class="product-price">$599 <sup>25</sup></div>
+										<button class="btn-big btn-more-details">
+											More details
+										</button>
+										<button class="btn-big btn-add-to-card">
+											Add to cart
+											<img src="img/korzwhite.png" alt="" />
+										</button>
+									</div>
+								</div>
+							</div>
+							<div class="col-4">
+								<div class="product">
+									<div class="product-image">
+										<img class="prd-img" src="img/tvbox.png" alt="" />
+										<div class="zoom"></div>
+										<div class="like"></div>
+									</div>
+									<div class="product-body">
+										<div class="product-name">#9 Device Name</div>
+										<div class="product-descriprion">
+											Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+										</div>
+										<div class="product-features">
+											<span>TYPE:</span> Laptop
+										</div>
+										<div class="product-features">
+											<span>SCREEN SIZE:</span> 7 inches
+										</div>
+										<div class="product-features"><span>RAM:</span> 1GB</div>
+										<div class="product-price">$599 <sup>25</sup></div>
+										<button class="btn-big btn-more-details">
+											More details
+										</button>
+										<button class="btn-big btn-add-to-card">
+											Add to cart
+											<img src="img/korzwhite.png" alt="" />
+										</button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</main>
+
 		<footer class="footer">footer</footer>
 
 		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 		<script>
 			const swiper = new Swiper('.swiper', {
-  // Optional parameters
-  direction: 'horizontal',
-  loop: true,
+				// Optional parameters
+				direction: 'horizontal',
+				loop: true,
 
-  // Navigation arrows
-  navigation: {
-    nextEl: '.swiper-button-next',
-    prevEl: '.swiper-button-prev',
-  },
-});
+				// Navigation arrows
+				navigation: {
+					nextEl: '.swiper-button-next',
+					prevEl: '.swiper-button-prev'
+				}
+			})
 		</script>
 	</body>
 </html>
