--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
 						<div class="filter">
 							<form action="">
 								<div class="device-type">
-									<p>DEVICE TYPE</p>
+									<p> My DEVICE TYPE </p>
 									<input type="checkbox" class="input" /><label
 										for="Laptop"
-										>Laptop</label
+										>Old Laptop</label
 									><br />
 									<input type="checkbox" class="input" /><label
 										for="Tablet"
-										>Tablet</label>
+										>New Tablet</label>
 								</div>
 								<div class="color">
 									<p>COLOR</p>
