--- a/index.html
+++ b/index.html
@@ -94,33 +94,33 @@
 							<form action="">
 								<div class="device-type">
 									<p>DEVICE TYPE </p>
-									<input type="checkbox" class="input" /><label
+									<input type="checkbox" id="Laptop" class="input" /><label
 										for="Laptop"
 										>Laptop</label
 									><br />
-									<input type="checkbox" class="input" /><label
+									<input type="checkbox" id="Tablet" class="input" /><label
 										for="Tablet"
 										>Tablet</label>
 								</div>
 								<div class="color">
 									<p>COLOR</p>
-									<input type="checkbox" class="input" /><label
+									<input type="checkbox" id="Black" class="input" /><label
 										for="Black"
 										>Black</label
 									><br />
-									<input type="checkbox" class="input" /><label
+									<input type="checkbox" id="Red" class="input" /><label
 										for="Red"
 										>Red</label
 									><br />
-									<input type="checkbox" class="input" /><label
+									<input type="checkbox" id="Green" class="input" /><label
 										for="Green"
 										>Green</label
 									><br />
-									<input type="checkbox" class="input" /><label
+									<input type="checkbox" id="Blue" class="input" /><label
 										for="Blue"
 										>Blue</label
 									><br />
-									<input type="checkbox"  class="input" /><label
+									<input type="checkbox" id="Orange" class="input" /><label
 										for="Orange"
 										>Orange</label
 									>
